Whoops, updated cmakelists for renamed option.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ if(WIN32)
 	endif()
 
 	if ( MINGW )
-		if ( BACKTRACE )
+		if ( BACKTRACE_SUPPORTED )
 			find_file(DBGHELP_DLL dbghelp.dll REQUIRED )
 			find_file(EXCHNDL_DLL exchndl.dll REQUIRED )
 			find_file(MGWHELP_DLL mgwhelp.dll REQUIRED )
@@ -429,7 +429,7 @@ if ((CMAKE_COMPILER_IS_GNUCXX) OR (CMAKE_CXX_COMPILER_ID MATCHES "Clang"))
 	set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-include VS_Prefix_Debug.h -Wall -Werror ${CMAKE_CXX_FLAGS_RELWITHDEBINFO}" )
 	set(CMAKE_CXX_FLAGS_RELEASE "-include VS_Prefix.h -Wall -mfpmath=sse -msse2 ${CMAKE_CXX_FLAGS_RELEASE}" )
 
-	if ( MINGW AND BACKTRACE )
+	if ( MINGW AND BACKTRACE_SUPPORTED )
 		set(CMAKE_CXX_FLAGS_DEBUG "-g -fno-omit-frame-pointer ${CMAKE_CXX_FLAGS_DEBUG}" )
 		set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g -fno-omit-frame-pointer ${CMAKE_CXX_FLAGS_RELWITHDEBINFO}" )
 		set(CMAKE_CXX_FLAGS_RELEASE "-g -fno-omit-frame-pointer ${CMAKE_CXX_FLAGS_RELEASE}" )
