Adds GL_CHECK_SCOPED("context") and GL_CHECK("context") macros.
Scoped checks for OpenGL errors both at the start and end of the scope,
and non-scoped checks immediately.

Adds a new option "VS_GL_DEBUG".  If turned on, the above macros
actually check for errors;  if off, they become NOPs so strongly that
their strings won't even make it into the string table.  (Yay for
preprocessor macros!)

Additionally, if that option is enabled, we try to set up an OpenGL
debug context instead of a core context, and if that's successful we
try to hook into the OpenGL debug message callback.  If that's
successful, then any OpenGL debug messages get put into our log as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ option( USE_SDL_SOUND "If disabled, don't use the SDL-based sound system." YES )
 option( USE_BOX2D_PHYSICS "If disabled, don't use the Box2D collision system." YES )
 option( VS_OVERLOAD_ALLOCATORS "If enabled, use custom internal allocators which can track memory overruns and leaks." YES )
 option( BACKTRACE_SUPPORTED "If enabled, generate backtraces in the event of a crash. (currently only supported for Linux/OSX/MinGW)" YES )
+option( VS_GL_DEBUG "If enabled, try to create an OpenGL Debug context and spit out any errors to the log.  Additionally, perform extra OpenGL error testing." NO )
 
 find_package(OpenGL REQUIRED)
 find_library(SDL_LIBRARY SDL2 REQUIRED
