Adds vsStringTable, used for accelerated construction of string tables.
Vastly speeds up binary save of large vsRecord structures.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -379,6 +379,8 @@ set(UTILS_SOURCES
 	VS/Utils/VS_Spring.h
 	VS/Utils/VS_String.cpp
 	VS/Utils/VS_String.h
+	VS/Utils/VS_StringTable.cpp
+	VS/Utils/VS_StringTable.h
 	VS/Utils/VS_StrongPointer.h
 	VS/Utils/VS_StrongPointerTarget.h
 	VS/Utils/VS_System.cpp
