Experimenting with using fmtlib for string formatting.
In theory, this lets us use std::string parameters to vsFormatString(),
and elsewhere.  It also lets us think about using {0}, {1}, etc (via
a different interface), which would let localisation strings change
the order of variable display in a string.

This is very experimental and raw, in this commit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -397,6 +397,8 @@ set(UTILS_SOURCES
 	VS/Utils/VS_VolatileArrayStore.h
 	VS/Utils/VS_WeakPointer.h
 	VS/Utils/VS_WeakPointerTarget.h
+	VS/Utils/fmt/format.cc
+	VS/Utils/fmt/format.h
 	)
 set(SOURCES
 	VS/VS_Headers.h
