Adds vsSpan class for representing a 1D span of values.
vsSpan is like a 1-dimensional vsBox.  It's a range of values which can
be intersected against other ranges, checked for whether it contains
particular values, etc.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,6 +277,8 @@ set(MATH_SOURCES
 	VS/Math/VS_Quaternion.h
 	VS/Math/VS_Random.cpp
 	VS/Math/VS_Random.h
+	VS/Math/VS_Span.cpp
+	VS/Math/VS_Span.h
 	VS/Math/VS_Spline.cpp
 	VS/Math/VS_Spline.h
 	VS/Math/VS_Transform.cpp
