General proof of concept about VAO integration into VS.
This about 95% works, but is still broken for instanced rendering.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -523,3 +523,4 @@ if (CMAKE_BUILD_TYPE STREQUAL "Debug" AND UNIX)
 	set_source_files_properties(VS/Math/VS_Matrix.cpp PROPERTIES COMPILE_FLAGS -O3)
 endif ()
 target_include_directories(vectorstorm PUBLIC "${PROJECT_BINARY_DIR}/config")
+set( VECTORSTORM_INCLUDE_PATHS "${PROJECT_BINARY_DIR}/config" PARENT_SCOPE)
