Adds vsSingleFloatImage, for textures with a single floating point channel.
I should probably eventually figure out how to merge these different
image types into a single vsImage class.  But for now, I'm making the
ones I need.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -383,6 +383,7 @@ set(UTILS_SOURCES
 	VS/Utils/VS_Singleton.h
 	VS/Utils/VS_SingletonManager.cpp
 	VS/Utils/VS_SingletonManager.h
+	VS/Utils/VS_SingleFloatImage.cpp
 	VS/Utils/VS_Spring.cpp
 	VS/Utils/VS_Spring.h
 	VS/Utils/VS_String.cpp
