Address cmake policy CMP0072 (libgl vs libopengl)
Recent CMake builds now support either looking for legacy OpenGL
libraries (libgl.so), or looking for GLVND (libopengl.so).

After minimal testing, the VectorStorm library appears to work just fine
with either library (as one would hope), but cmake really wants us to
specify a preference or it'll spit out warnings.

SO, let's specify that if both are available, then we prefer the modern
GLVND libraries.  We'd be okay with legacy libraries, too, though.

(GLVND is "OpenGL Vendor-Neutral Dispatch")

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,11 @@ option( VS_TIMING_BARS "If enabled, we'll draw timing bars at the bottom left of
 option( VS_DEFAULT_VIRTUAL_CONTROLLER "If enabled, we use the default controller settings.  If disabled, games must provide their own." YES )
 option( VS_TOOL "Various adjustments for tool (non-game) support" NO )
 
+# If we have a choice between legacy libgl.so and more modern
+# libOpenGL.so (the "GL Vendor-Neutral Dispatch" library), let's
+# use the modern vender-neutral library.
+#
+set( OpenGL_GL_PREFERENCE "GLVND" )
 find_package(OpenGL REQUIRED)
 find_library(SDL_LIBRARY SDL2 REQUIRED
 	PATH c:/src/buildzone/lib/x86/)
