--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,12 @@ endif()
 find_path(SDL_INCLUDE_DIR SDL2/SDL.h REQUIRED
 	PATH c:/src/buildzone/include)
 
+if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
+	add_definitions("-D IS_64BIT")
+else()
+	add_definitions("-D IS_32BIT")
+endif()
+
 if(UNIX OR MINGW)
 	if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
 		set(CMAKE_CXX_FLAGS "-march=x86-64 -msse -msse2 ${CMAKE_CXX_FLAGS}")
