--- a/VS_Config.h.in
+++ b/VS_Config.h.in
@@ -1,4 +1,5 @@
 // Configured build settings, as detected by cmake
+#cmakedefine VS_PRISTINE_BINDINGS
 #cmakedefine VS_OVERLOAD_ALLOCATORS
 #cmakedefine HIGHDPI_SUPPORTED
 #cmakedefine USE_SDL_SOUND
