First implementation of dynamic batching.
It's a little ugly, but it works!  Currently only implemented for PCT
vertex format.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,6 +203,10 @@ set(GRAPHICS_SOURCES
 	VS/Graphics/VS_Color.h
 	VS/Graphics/VS_DisplayList.cpp
 	VS/Graphics/VS_DisplayList.h
+	VS/Graphics/VS_DynamicBatch.cpp
+	VS/Graphics/VS_DynamicBatch.h
+	VS/Graphics/VS_DynamicBatchManager.cpp
+	VS/Graphics/VS_DynamicBatchManager.h
 	VS/Graphics/VS_DynamicMaterial.cpp
 	VS/Graphics/VS_DynamicMaterial.h
 	VS/Graphics/VS_Entity.cpp
