Adds vsSleep() function.
Sleeps for a number of milliseconds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -438,6 +438,9 @@ set(UTILS_SOURCES
 	VS/Utils/VS_SingletonManager.cpp
 	VS/Utils/VS_SingletonManager.h
 	VS/Utils/VS_SingleFloatImage.cpp
+	VS/Utils/VS_SingleFloatImage.h
+	VS/Utils/VS_Sleep.cpp
+	VS/Utils/VS_Sleep.h
 	VS/Utils/VS_Spring.cpp
 	VS/Utils/VS_Spring.h
 	VS/Utils/VS_String.cpp
